# DarkWin32

./: CMakeLists.txt  README.md
res/: main.aps  main.rc  resource.h
src/DarkMenu/: UAHMenuBar.cpp
src/DarkMode/: DarkMode.h
src/Main/: main.c  main.cpp
